log/build_2021-03-22_11-11-55/turtlesim_simple/stdout_stderr.log
running egg_info
creating ../../build/turtlesim_simple/turtlesim_simple.egg-info
writing ../../build/turtlesim_simple/turtlesim_simple.egg-info/PKG-INFO
writing dependency_links to ../../build/turtlesim_simple/turtlesim_simple.egg-info/dependency_links.txt
writing entry points to ../../build/turtlesim_simple/turtlesim_simple.egg-info/entry_points.txt
writing requirements to ../../build/turtlesim_simple/turtlesim_simple.egg-info/requires.txt
writing top-level names to ../../build/turtlesim_simple/turtlesim_simple.egg-info/top_level.txt
writing manifest file '../../build/turtlesim_simple/turtlesim_simple.egg-info/SOURCES.txt'
reading manifest file '../../build/turtlesim_simple/turtlesim_simple.egg-info/SOURCES.txt'
writing manifest file '../../build/turtlesim_simple/turtlesim_simple.egg-info/SOURCES.txt'
running build
running build_py
creating /home/ubuntu/dev_ws/build/turtlesim_simple/build
creating /home/ubuntu/dev_ws/build/turtlesim_simple/build/lib
creating /home/ubuntu/dev_ws/build/turtlesim_simple/build/lib/turtlesim_simple
copying turtlesim_simple/__init__.py -> /home/ubuntu/dev_ws/build/turtlesim_simple/build/lib/turtlesim_simple
copying turtlesim_simple/publisher.py -> /home/ubuntu/dev_ws/build/turtlesim_simple/build/lib/turtlesim_simple
running install
running install_lib
creating /home/ubuntu/dev_ws/install/turtlesim_simple/lib/python3.8/site-packages/turtlesim_simple
copying /home/ubuntu/dev_ws/build/turtlesim_simple/build/lib/turtlesim_simple/__init__.py -> /home/ubuntu/dev_ws/install/turtlesim_simple/lib/python3.8/site-packages/turtlesim_simple
copying /home/ubuntu/dev_ws/build/turtlesim_simple/build/lib/turtlesim_simple/publisher.py -> /home/ubuntu/dev_ws/install/turtlesim_simple/lib/python3.8/site-packages/turtlesim_simple
byte-compiling /home/ubuntu/dev_ws/install/turtlesim_simple/lib/python3.8/site-packages/turtlesim_simple/__init__.py to __init__.cpython-38.pyc
byte-compiling /home/ubuntu/dev_ws/install/turtlesim_simple/lib/python3.8/site-packages/turtlesim_simple/publisher.py to publisher.cpython-38.pyc
  File "/home/ubuntu/dev_ws/install/turtlesim_simple/lib/python3.8/site-packages/turtlesim_simple/publisher.py", line 7
    super().__init__('simple_publisher)
                                      ^
SyntaxError: EOL while scanning string literal

running install_data
creating /home/ubuntu/dev_ws/install/turtlesim_simple/share/ament_index
creating /home/ubuntu/dev_ws/install/turtlesim_simple/share/ament_index/resource_index
creating /home/ubuntu/dev_ws/install/turtlesim_simple/share/ament_index/resource_index/packages
copying resource/turtlesim_simple -> /home/ubuntu/dev_ws/install/turtlesim_simple/share/ament_index/resource_index/packages
copying package.xml -> /home/ubuntu/dev_ws/install/turtlesim_simple/share/turtlesim_simple
running install_egg_info
Copying ../../build/turtlesim_simple/turtlesim_simple.egg-info to /home/ubuntu/dev_ws/install/turtlesim_simple/lib/python3.8/site-packages/turtlesim_simple-0.0.0-py3.8.egg-info
running install_scripts
Installing talker script to /home/ubuntu/dev_ws/install/turtlesim_simple/lib/turtlesim_simple
writing list of installed files to '/home/ubuntu/dev_ws/build/turtlesim_simple/install.log'
